# scopenode

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  ONBOARDING.md  README.md  VISION.md  config.example.toml  config.test.toml
crates/scopenode/: Cargo.toml
crates/scopenode-core/: Cargo.toml
crates/scopenode-core/examples/: fetch_fixtures.rs
crates/scopenode-core/src/: abi.rs  abi_resolution.rs  beacon.rs  codec.rs  config.rs  daemon.rs  decode_quality.rs  e2store.rs  era1_codec.rs  era1_reader.rs  era_pipeline.rs  error.rs  headers.rs  helios_client.rs  lib.rs  live.rs  network.rs  pipeline.rs  receipts.rs  reorg.rs  source.rs  types.rs  webhook.rs
crates/scopenode-core/src/source/: checksum.rs  filename.rs
crates/scopenode-core/tests/: era1_manifest_fixture.rs  era1_pipeline_test.rs  fixture_verify.rs
crates/scopenode-rpc/: Cargo.toml
crates/scopenode-rpc/src/: filter_plan.rs  lib.rs  projection.rs  query_front_door.rs  rest.rs  server.rs
crates/scopenode-rpc/tests/: parity.rs
crates/scopenode-storage/: Cargo.toml
crates/scopenode-storage/src/: abi_store.rs  coverage.rs  db.rs  error.rs  lib.rs  models.rs  query.rs  sink.rs  types.rs
crates/scopenode-storage/src/migrations/: 001_init.sql  002_bloom_hex.sql  003_schema_hardening.sql  004_source_manifest.sql  005_reset_schema.sql  006_topic_lookup_index.sql  007_add_timestamp.sql  008_coverage.sql
crates/scopenode/src/: cli.rs  main.rs  runtime.rs  sourcify.rs  sync_plan.rs  tui.rs
crates/scopenode/src/commands/: abi.rs  doctor.rs  export.rs  index.rs  logs.rs  mod.rs  query.rs  restore.rs  retry.rs  serve.rs  snapshot.rs  start.rs  status.rs  stop.rs  sync.rs  validate.rs
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/architecture/: 2026-05-07-lightnode-erae-pivot.md
docs/brainstorms/: 2026-04-21-scope-refinement-requirements.md  2026-05-04-mempool-relay-requirements.md  2026-05-21-efficiency-improvements-requirements.md  2026-05-30-sourcify-abi-fetching-requirements.md
docs/phases/: PHASE_01_mvp.md  PHASE_02_p2p.md  PHASE_02_source_hardening.md  PHASE_03_live.md  PHASE_04_developer.md  PHASE_05_computed_state.md
docs/plans/: 2026-04-21-001-refactor-scope-refinement-plan.md  2026-05-21-efficiency-improvements-plan.md
docs/qa/: manual-e2e-qa-2026-05-27.md
docs/superpowers/plans/: 2026-04-07-code-quality-pass.md  2026-04-17-webhooks.md  2026-05-04-mempool-relay.md  2026-06-02-architecture-deepening.md  2026-06-04-ere-support.md  2026-06-06-observability-and-benchmarks.md
docs/superpowers/specs/: 2026-04-07-code-quality-pass-design.md  2026-04-17-webhooks-design.md  2026-06-06-observability-and-benchmarks-design.md
fixtures/configs/: era1-index.toml
fixtures/era1/mainnet/: checksums.txt
phases/: PHASE_01_mvp.md  PHASE_02_p2p.md  PHASE_02_trustless.md  PHASE_03_live.md  PHASE_03_production.md  PHASE_03a_reliability.md  PHASE_03b_dx.md  PHASE_04_developer.md
