[package]
name = "scopenode-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy             = { workspace = true }
alloy-primitives  = { workspace = true }
alloy-dyn-abi     = { workspace = true }
alloy-trie        = { workspace = true }
tokio             = { workspace = true }
thiserror         = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
toml              = { workspace = true }
tracing           = { workspace = true }
reqwest           = { workspace = true }
async-trait       = { workspace = true }
indicatif         = { workspace = true }
scopenode-storage = { workspace = true }
# devp2p
reth-network             = { workspace = true }
reth-network-api         = { workspace = true }
reth-network-peers       = { workspace = true }
reth-network-p2p         = { workspace = true }
reth-eth-wire            = { workspace = true }
reth-storage-api         = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-ethereum-forks      = { workspace = true }
tokio-stream             = { workspace = true }
