[package]
name = "scopenode-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy             = { workspace = true }
alloy-consensus   = { workspace = true }
alloy-primitives  = { workspace = true }
alloy-dyn-abi     = { workspace = true }
alloy-rlp         = { workspace = true }
alloy-trie        = { workspace = true }
tokio             = { workspace = true }
thiserror         = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
toml              = { workspace = true }
tracing           = { workspace = true }
async-trait       = { workspace = true }
indicatif         = { workspace = true }
scopenode-storage = { workspace = true }
sha2              = { workspace = true }
snap              = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }
