[package]
name = "scopenode-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx         = { workspace = true }
tokio        = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
alloy-primitives = { workspace = true }
futures-core = "0.3"

[dev-dependencies]
tempfile     = "3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
