[package]
name = "scopenode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scopenode"
path = "src/main.rs"

[dependencies]
scopenode-core    = { workspace = true }
scopenode-storage = { workspace = true }
scopenode-rpc     = { workspace = true }
tokio             = { workspace = true }
anyhow            = { workspace = true }
async-trait       = { workspace = true }
clap              = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
dirs              = { workspace = true }
indicatif         = { workspace = true }
reqwest           = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json        = { workspace = true }
alloy-primitives  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
